# ClarityQL

./: .env.example  .gitignore  DELIVERY_SUMMARY.md  FOLLOWUP_EXAMPLES.md  README.md  TEST_SUMMARY.md  pyproject.toml
apps/backend/: alembic.ini  main.py
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0880f7bb3526_add_default_tenant.py  21cfdfadc4b3_add_tasks_table.py  2c7a818c3a22_add_conversation_status_and_messages.py  65fb84b2c6a2_add_rag_schema_with_pgvector.py  a5de6bfa025f_add_nlq_query_task_type.py  dd4449dc849d_add_conversation_type_to_conversations.py  e186c6ae1322_add_document_processing_status.py  f9a1b2c3d4e5_add_rag_query_task_type.py
apps/backend/app/: main.py
apps/backend/app/core/: celery_app.py  config.py  constants.py  dependencies.py  security.py
apps/backend/app/db/: session.py
apps/backend/app/models/: __init__.py  chunk.py  conversation.py  conversation_state.py  document.py  message.py  query_log.py  task.py  tenant.py  user.py
apps/backend/app/schemas/: __init__.py  auth.py  nlq.py  rag.py
apps/backend/app/services/: tenant_service.py
apps/backend/app/tasks/: __init__.py  nlq_tasks.py  rag_tasks.py
apps/backend/scripts/: manage_embeddings.py
apps/backend/tests/: verify_conversations.py
apps/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
apps/frontend/src/: App.tsx  index.css
apps/frontend/src/api/: auth.ts  client.ts  nlq.ts  rag.ts
apps/frontend/src/auth/: index.ts
apps/frontend/src/components/: PlaceholderCard.tsx
apps/frontend/src/contexts/: AuthContext.tsx
apps/frontend/src/lib/: utils.ts
apps/frontend/src/pages/: Dashboard.tsx  DocumentsPage.tsx  Login.tsx  LoginPage.tsx  MainPage.tsx  RegisterPage.tsx
infra/: docker-compose.yml
scripts/: create_tables.py  format.sh  lint.sh  nlq_chat.py  quick_start_and_test.sh  run_backend.sh  seed_data.py  start_all_services.sh  start_api_server.sh  start_celery_worker.sh
tests/: __init__.py
tests/core/: test_compiler.py  test_join_resolver.py  test_nlq_followups.py  test_validator.py  test_viz_inference.py
tests/llm/: test_factory.py  test_parser.py  test_prompts.py
(+49 files in other folders)
