[project]
name = "clarityql"
version = "0.1.0"
description = "Natural Language Query (NLQ) analytics platform."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "pydantic-settings",
  "httpx",
  "pytest",
  "ruff",
  "black",
  "sqlalchemy",
  "psycopg",
  "faker",
  # LangChain LLM integrations
  "langchain-core",
  "langchain-google-genai",
  "langchain-openai",
  "langchain-anthropic",
  # CLI utilities
  "rich",
  "python-dotenv",
]

[tool.uv]
package = false
