[project]
name = "clarityql"
version = "0.1.0"
description = "Natural Language Query (NLQ) analytics platform."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic[email]",
  "pydantic-settings",
  "httpx",
  "pytest",
  "ruff",
  "black",
  "sqlalchemy[asyncio]",
  "psycopg",
  "asyncpg",
  "faker",
  # LangChain LLM integrations
  "langchain-core",
  "langchain-google-genai",
  "langchain-openai",
  "langchain-anthropic",
  # CLI utilities
  "rich",
  "python-dotenv",
  # Auth
  "python-jose[cryptography]",
  "bcrypt>=4.0.0,<5.0.0",
]

[tool.uv]
package = false
