[project]
name = "clarityql"
version = "0.1.0"
description = "Natural Language Query (NLQ) analytics platform."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic[email]",
  "pydantic-settings",
  "httpx",
  "pytest",
  "ruff",
  "black",
  "sqlalchemy[asyncio]",
  "psycopg",
  "asyncpg",
  "faker",
  # LangChain LLM integrations
  "langchain-core",
  "langchain-google-genai",
  "langchain-openai",
  "langchain-anthropic",
  # CLI utilities
  "rich",
  "python-dotenv",
  # Auth
  "python-jose[cryptography]",
  "bcrypt>=4.0.0,<5.0.0",
  # RAG / pgvector
  "pgvector",
  # Migrations
  "alembic",
  # Document processing (RAG ingestion)
  "docling",
  "docling-core",
  "langdetect",  # Language detection
  "python-magic",  # File type detection
  # Async task processing
  "celery[sqlalchemy]>=5.3.0",
  "redis>=5.0.0",  # Redis for Celery broker
]

[tool.uv]
package = false
